--- a/README.org
+++ b/README.org
@@ -127,6 +127,8 @@ Install =org-super-agenda= from MELPA.  Then:
 
 Contributions and feedback are welcome.
 
+If you find this useful, I'd appreciate if you would share a screenshot or two of your agenda views using it (minus any private data, of course).  I'd like to get ideas for how to better organize my agenda.  :)
+
 *** Bugs
 
 + The =org-search-view= agenda command does not seem to set the =todo-state= text property for items it finds, so the =:todo= selector doesn't work with it.  We should be able to work around this by getting the todo state for each item manually, but we have to make sure that we only do that when necessary, otherwise it might be slow.  And I wouldn't be surprised if there are other selectors that don't work with this or other commands, but =org-agenda-list= should work fine, and =org-tags-view= and =org-todo-list= seem to work.
