--- a/README.org
+++ b/README.org
@@ -114,7 +114,7 @@ Note that the =:not= group selector /creates/ a group with items it /does not/ m
 +  =:scheduled= Group items that are scheduled.
 +  =:tag= Group items that match any of the given tags. Argument may be a string or list of strings.
 +  =:time= Group items that have a time associated. Items with an associated timestamp that has a time (rather than just a date) are selected.
-+  =:todo= Group items that match any of the given TODO keywords. Argument may be a string or list of strings.
++  =:todo= Group items that match any of the given TODO keywords. Argument may be a string or list of strings, or =t= to match any keyword, or =nil= to match only non-todo items.
 
 ** Installation
 
