--- a/README.org
+++ b/README.org
@@ -101,7 +101,7 @@ Note that the =:not= group selector /creates/ a group with items it /does not/ m
 +  =:anything= Select every item, no matter what.  This is probably most useful with =:discard=, because it doesn't actually test anything, so it's faster than, e.g. ~:regexp "."~, which has to get the entry text for every item.
 +  =:discard= Discard items that don't match selectors.  Any groups processed after this one will not see discarded items.  You might use this at the beginning or end of a list of groups, either to narrow down the list of items (used in combination with =:not=), or to exclude items you're not interested in.
 +  =:not= Group ITEMS that match no selectors in GROUP.
-+  =:order= A number setting the order sections will be displayed in the agenda, lowest number first.  Defaults to =0=.
++  =:order= A number setting the order sections will be displayed in the agenda, lowest number first.  Default is =10=, customizable with =org-super-agenda-default-order=.
 +  =:order-multi= Set the order of multiple groups at once, like ~(:order-multi (2 (groupA) (groupB) ...))~ to set the order of these groups to 2.
 
 *Normal selectors:*
