--- a/notes.org
+++ b/notes.org
@@ -58,10 +58,10 @@ This helps a lot.
       ;; Surround content in a list which `argh' is set to, then eval
       ;; the buffer to do it
       (goto-char (point-min))
-      (insert "(setq argh (list ")
+      (insert "(setq argh (list '")
       (delete-forward-char 2)
       (goto-char (point-max))
-      (insert ")")
+      (insert "))")
 
       ;; Okay, sure, eval'ing the buffer is dangerous and bad and wrong.
       ;; But this is the only way I can find to make this work.  (Maybe
