--- a/notes.org
+++ b/notes.org
@@ -1037,6 +1037,34 @@ CLOSED: [2017-07-28 Fri 00:02]
 
 I just discovered the =cl-seq= library, which includes =cl-subsetp=, which might be preferable over =seq-intersection= for testing membership.
 
+** SOMEDAY Look at how ibuffer does grouping
+:LOGBOOK:
+-  State "SOMEDAY"    from              [2017-07-31 Mon 18:51]
+:END:
+
+[[http://martinowen.net/blog/2010/02/03/tips-for-emacs-ibuffer.html][For example]]:
+
+#+BEGIN_SRC elisp
+  (setq ibuffer-saved-filter-groups
+        '(("home"
+           ("emacs-config" (or (filename . ".emacs.d")
+                               (filename . "emacs-config")))
+           ("martinowen.net" (filename . "martinowen.net"))
+           ("Org" (or (mode . org-mode)
+                      (filename . "OrgMode")))
+           ("code" (filename . "code"))
+           ("Web Dev" (or (mode . html-mode)
+                          (mode . css-mode)))
+           ("Subversion" (name . "\*svn"))
+           ("Magit" (name . "\*magit"))
+           ("ERC" (mode . erc-mode))
+           ("Help" (or (name . "\*Help\*")
+                       (name . "\*Apropos\*")
+                       (name . "\*info\*"))))))
+#+END_SRC
+
+I could probably learn a lot from studying how this is implemented.  It's basically doing the same thing but probably in a more lispy way.
+
 ** CANCELED Rewrite the whole agenda after it's done instead
 CLOSED: [2017-07-28 Fri 00:11]
 :LOGBOOK:
