--- a/examples.org
+++ b/examples.org
@@ -111,6 +111,18 @@ Let's say it's approaching the start of a new school year, and you want to see a
 
 Of course, you could also write that as a standard agenda command with the  [[http://orgmode.org/worg/org-tutorials/advanced-searching.html][advanced searching syntax]], and it would execute faster.
 
+What if you wanted to group tasks that are due before the end of the current month?  You could use something like this:
+
+#+BEGIN_SRC elisp
+  (-let* (((sec minute hour day month year dow dst utcoff) (decode-time))
+          (last-day-of-month (calendar-last-day-of-month month year))
+          (target-date (format "%d-%02d-%d" year month last-day-of-month))
+          (org-super-agenda-groups
+           `((:deadline (before ,target-date))
+             (:discard (:anything t)))))
+    (org-todo-list))
+#+END_SRC
+
 ** Projects
 
 With the =:children= selector you can select items that have children.  Assuming items without children aren't considered projects, you can view projects like this:
