--- a/examples.org
+++ b/examples.org
@@ -6,7 +6,7 @@ There are a lot of possibilities, so here are some examples to spark your imagin
 
 *Note:* You can test any of these examples by evaluating the whole =let= form in Emacs (or, if you open this file in Emacs, by executing the code block with =C-c C-c=).
 
-** Auto groups
+** Automatically by groups
 
 By setting the Org property =agenda-group= and using the =:auto-groups= selector, you can automatically sort agenda items into groups.  By default, this property is inherited, so you can set it for an entire subtree of items at once.  For example, if you had this Org file:
 
@@ -42,6 +42,16 @@ You could use an agenda command like this:
 And you'd get an agenda looking like this:
 
 [[screenshots/auto-groups.png]]
+
+** Automatically by categories
+
+In the same way, items can automatically be grouped by their category (which is usually the filename of the buffer they're in).
+
+#+BEGIN_SRC elisp
+  (let ((org-super-agenda-groups
+         '((:auto-category t))))
+    (org-agenda-list))
+#+END_SRC
 
 ** Forward-looking
 
